--- a/src/App.scss
+++ b/src/App.scss
@@ -42,7 +42,7 @@ input:focus {
 }
 
 .custom-input {
-  padding: 16rem 0 8rem 0;
+  padding: calc(8rem + 95px) 0 8rem 0;
   min-height: 50vh;
   .content {
     padding: 2rem 2rem;
@@ -50,9 +50,6 @@ input:focus {
     background: orange;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: right;
-    .content-btn {
-      margin-bottom: 2rem;
-    }
     .single-row {
       background: #fff;
       display: flex;
@@ -61,7 +58,7 @@ input:focus {
       padding: 1.5rem;
       border-radius: 0.5rem;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      margin-bottom: 2rem;
+      margin-top: 2rem;
       .row-ele {
         padding: 2rem;
         width: 46%;
@@ -76,9 +73,6 @@ input:focus {
           padding: 2rem 0;
           cursor: pointer;
         }
-      }
-      &:last-child {
-        margin-bottom: 0;
       }
     }
   }
