--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-y: scroll;
+  background: rgba(255, 165, 0, 0.1);
 }
 
 code {
